# wasm-timer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: timer.rs  wasm.rs
src/timer/: arc_list.rs  delay.rs  heap.rs  interval.rs
src/timer/global/: wasm.rs
